--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,13 +131,7 @@ jobs:
                   --logger "trx;LogFileName=TestResults/${project_name}.trx" \
                   --settings "$runsettings_file" \
                   --collect:"XPlat Code Coverage" \
-                  --results-directory TestResults \
-                  /p:CollectCoverage=true \
-                  /p:CoverletOutputFormat=cobertura \
-                  /p:Exclude="[StoreFlow.Usuarios.API.Migrations*]*%2c[StoreFlow.Usuarios.API.Program]*%2c[*]*.Designer.cs%2c[*]*.g.cs%2c[*]*.AssemblyInfo.cs%2c[*]*.Startup.cs%2c[*]*.csproj%2c[*]*.razor%2c[*]*.cshtml%2c[*]*.json%2c[*]*.http%2c[*]*.Tests*]*%2c[*]obj*]*%2c[*]Properties*]*" \
-                  /p:ExcludeByAttribute="Obsolete%2cGeneratedCodeAttribute%2cCompilerGeneratedAttribute" \
-                  /p:ExcludeByFile="**/obj/**/*.cs%2c**/Properties/**/*.cs" \
-                  /p:Include="[StoreFlow.Usuarios.API*]*"
+                  --results-directory TestResults
               else
                 echo "No runsettings file found, using default coverage settings"
                 dotnet test "$project" --configuration Release --no-build --no-restore \
@@ -146,10 +140,9 @@ jobs:
                   --results-directory TestResults \
                   /p:CollectCoverage=true \
                   /p:CoverletOutputFormat=cobertura \
-                  /p:Exclude="[StoreFlow.Usuarios.API.Migrations*]*%2c[StoreFlow.Usuarios.API.Program]*%2c[*]*.Designer.cs%2c[*]*.g.cs%2c[*]*.AssemblyInfo.cs%2c[*]*.Startup.cs%2c[*]*.csproj%2c[*]*.razor%2c[*]*.cshtml%2c[*]*.json%2c[*]*.http%2c[*]*.Tests*]*%2c[*]obj*]*%2c[*]Properties*]*" \
+                  /p:ExcludeByFile="../StoreFlow.Usuarios.API/Program.cs%2c../StoreFlow.Usuarios.API/Migrations/**/*.cs%2c**/obj/**/*.cs%2c**/Properties/**/*.cs%2c**/*.Designer.cs%2c**/*.g.cs%2c**/*.AssemblyInfo.cs" \
                   /p:ExcludeByAttribute="Obsolete%2cGeneratedCodeAttribute%2cCompilerGeneratedAttribute" \
-                  /p:ExcludeByFile="**/obj/**/*.cs%2c**/Properties/**/*.cs" \
-                  /p:Include="[StoreFlow.Usuarios.API*]*"
+                  /p:IncludeDirectory="../StoreFlow.Usuarios.API"
               fi
             fi
           done
