--- a/StoreFlow.Usuarios/StoreFlow.Usuarios.Tests/StoreFlow.Usuarios.Tests.csproj
+++ b/StoreFlow.Usuarios/StoreFlow.Usuarios.Tests/StoreFlow.Usuarios.Tests.csproj
@@ -1,4 +1,4 @@
-﻿﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
@@ -34,5 +34,4 @@
         <Using Include="Xunit" />
     </ItemGroup>
 
-</Project>
 </Project>
